# qa-tools

./: .gitignore  README.md  config.yaml.template  main.py  player.py  pyproject.toml  recorder.py
js_bridge/: player.py  recorder.py
middlewares/: cors.py
player/: index.js  index.py
recorder/: index.js  index.py
router/: controller.py  player.py  recorder.py
scenarios/: .gitignore  replay_test.json
scripts/: init_linux.sh  init_mac.sh  init_window.bat  init_window.ps1
src/: config.py  driver_factory.py  file_handler.py  json_handler.py  lifespan.py  singleton.py
src/js_bridge/: bridge.py  player.py  recorder.py
src/router/: player.py  recorder.py  scenario.py
template/: controller.html  player.js  recorder.js
