[project]
name = "qa-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "selenium>=4.31.0",
    "selenium-stealth>=1.0.6",
    "uvicorn>=0.34.2",
]
